--- a/website/index.html
+++ b/website/index.html
@@ -3,6 +3,7 @@
     <!-- Bootstrap CSS --><link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!-- Font Awesome CSS--><link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.13.0/css/all.min.css" />
     <!-- Navbar --><link rel="stylesheet" href="css/navbar.css"/>
+    <!-- Colors --><link rel="stylesheet" href="css/color.css"/>
     <link href="css/style.css" rel="stylesheet">
     
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -49,16 +50,16 @@
 		<div class="carousel-inner">
 
 		  <div class="carousel-item active">
-			<img style="width: 500px;" src="#" class="d-block w-100" alt="...">
+			<img style="width: 500px;" src="../Images/kid_section/Earthquake.jpg" class="d-block w-100" alt="...">
 		  </div>
 		  <div class="carousel-item">
-			<img width="500px" src="#" class="d-block w-100" alt="...">
+			<img width="500px" src="../Images/kid_section/Avalanches.jpg" class="d-block w-100" alt="...">
 		  </div>
 		  <div class="carousel-item">
-			<img width="800px"  src="#" class="d-block w-100" alt="...">
+			<img width="800px"  src="../Images/kid_section/Drought.jpg" class="d-block w-100" alt="...">
 		  </div>
           <div class="carousel-item">
-			<img width="800px"  src="#" class="d-block w-100" alt="...">
+			<img width="800px"  src="../Images/kid_section/Flood.jpg" class="d-block w-100" alt="...">
 		  </div>
 		</div>
 
