--- a/website/index.html
+++ b/website/index.html
@@ -4,6 +4,7 @@
     <!-- Font Awesome CSS--><link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.13.0/css/all.min.css" />
     <!-- Navbar --><link rel="stylesheet" href="css/navbar.css"/>
     <!-- Colors --><link rel="stylesheet" href="css/color.css"/>
+    <!-- Scroll Bar --><link rel="stylesheet" href="css/scroll_bar.css"/>
     <link href="css/style.css" rel="stylesheet">
     
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,34 +13,37 @@
 </head>
 <body id="mainbody">
 
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light" id="navbar">
         <div class="container-fluid">
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link active" href="#">Home</a>
+                    <a class="nav-link active" href="index.html#alphaHomePage">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Features</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Pricing</a>
-                </li>
-                <li class="nav-item colorMode">
-                    <div class="colorModeDark nav-link open"><i class="fas fa-moon"></i></div>
-                    <div class="colorModeLight nav-link close"><i class="fas fa-sun"></i></div>
-                </li>
+                  <a class="nav-link" href="index.html#Content">Content</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">About us</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Kid</a>
+            </li>
+            <li class="nav-item colorMode">
+                <div class="colorModeDark nav-link open"><i class="fas fa-moon"></i></div>
+                <div class="colorModeLight nav-link close"><i class="fas fa-sun"></i></div>
+            </li>
             </ul>
           </div>
         </div>
     </nav>
 
-    <div class ="alphaHomePage">
+    <div class ="alphaHomePage" id="alphaHomePage">
       <div class="alphaHomePageLogo"><span>Logo</span></div>
       <div class="alphaHomePageText"><span>Text</span></div>
   </div>
 
-<div class = "Content">
+<div class = "Content" id="Content">
     <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
 		<div class="carousel-indicators">
 		  <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -50,16 +54,16 @@
 		<div class="carousel-inner">
 
 		  <div class="carousel-item active">
-			<img style="width: 500px;" src="../Kid_Images/Earthquake.jpg" class="d-block w-100" alt="...">
+			<img style="width: 500px;" src="../Images/kid_section/Earthquake.jpg" class="d-block w-100" alt="...">
 		  </div>
 		  <div class="carousel-item">
-			<img width="500px" src="../Kid_Images/Avalanches.jpg" class="d-block w-100" alt="...">
+			<img width="500px" src="../Images/kid_section/Avalanches.jpg" class="d-block w-100" alt="...">
 		  </div>
 		  <div class="carousel-item">
-			<img width="800px"  src="../Kid_Images/Drought.jpg" class="d-block w-100" alt="...">
+			<img width="800px"  src="../Images/kid_section/Drought.jpg" class="d-block w-100" alt="...">
 		  </div>
           <div class="carousel-item">
-			<img width="800px"  src="../Kid_Images/Flood.jpg" class="d-block w-100" alt="...">
+			<img width="800px"  src="../Images/kid_section/Flood.jpg" class="d-block w-100" alt="...">
 		  </div>
 		</div>
 
