Update carousel content

--- a/website/index.html
+++ b/website/index.html
@@ -18,7 +18,7 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link active" href="index.html#alphaHomePage">Home</a>
+                    <a class="nav-link active" href="index.html#">Home</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="index.html#Content">Content</a>
@@ -54,17 +54,21 @@
 		<div class="carousel-inner">
 
 		  <div class="carousel-item active">
-			<img style="width: 500px;" src="../Images/kid_section/Earthquake.jpg" class="d-block w-100" alt="...">
+			  <img src="../Images/normal_section/EarthquakeRealistic.jpg" class="d-block w-100" alt="...">
 		  </div>
+
 		  <div class="carousel-item">
-			<img width="500px" src="../Images/kid_section/Avalanches.jpg" class="d-block w-100" alt="...">
+			  <img src="../Images/normal_section/Avalanche.jpg" class="d-block w-100" alt="...">
 		  </div>
-		  <div class="carousel-item">
-			<img width="800px"  src="../Images/kid_section/Drought.jpg" class="d-block w-100" alt="...">
-		  </div>
-          <div class="carousel-item">
-			<img width="800px"  src="../Images/kid_section/Flood.jpg" class="d-block w-100" alt="...">
-		  </div>
+      
+      <div class="carousel-item">
+        <img src="../Images/normal_section/DroughtRealistic.jpg" class="d-block w-100" alt="...">
+      </div>
+
+      <div class="carousel-item">
+        <img src="../Images/normal_section/FloodRealistic.jpg" class="d-block w-100" alt="...">
+      </div>
+
 		</div>
 
 		<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
