--- a/website/index.html
+++ b/website/index.html
@@ -54,19 +54,19 @@
 		<div class="carousel-inner">
 
 		  <div class="carousel-item active">
-			  <img src="../Images/normal_section/EarthquakeRealistic.jpg" class="d-block w-100" alt="...">
+			  <img src="../Images/normal_section/EarthquakeRealistic.jpg" class="d-block w-100" alt="..." link="Geophysical.html">
 		  </div>
 
 		  <div class="carousel-item">
-			  <img src="../Images/normal_section/Avalanche.jpg" class="d-block w-100" alt="...">
+			  <img src="../Images/normal_section/FloodRealistic.jpg" class="d-block w-100" alt="..." link="Hydrological.html">
 		  </div>
       
       <div class="carousel-item">
-        <img src="../Images/normal_section/DroughtRealistic.jpg" class="d-block w-100" alt="...">
+        <img src="../Images/normal_section/DroughtRealistic.jpg" class="d-block w-100" alt="..." link="Climatological.html">
       </div>
 
       <div class="carousel-item">
-        <img src="../Images/normal_section/FloodRealistic.jpg" class="d-block w-100" alt="...">
+        <img src="../Images/normal_section/CycloneRealistic.jpg" class="d-block w-100" alt="..."link="Meteorological.html">
       </div>
 
 		</div>
