--- a/website/Geophysical.html
+++ b/website/Geophysical.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
-
 <head>
-  <!-- Bootstrap CSS --><link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <!-- Bootstrap CSS --><link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!-- Font Awesome CSS--><link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.13.0/css/all.min.css" />
     <!-- Navbar --><link rel="stylesheet" href="css/navbar.css"/>
     <!-- Colors --><link rel="stylesheet" href="css/color.css"/>
@@ -9,12 +8,33 @@
     <link href="css/style.css" rel="stylesheet">
     
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-
+    <title>Poseidon</title>
 
 </head>
-
-<body>
-
-
+<body id="mainbody">
+    <header>
+        <ul>
+            <li class="navbarList">
+                <a href="index.html#" class="navbarLink">Home</a>
+            </li>
+            <li class="navbarList">
+                <a href="index.html#Content" class="navbarLink">Content</a>
+            </li>
+            <li class="navbarList">
+                <a href="#" class="navbarLink">About us</a>
+            </li>
+            <div class="leftNavbarList">
+                <li class="navbarList leftNavbarList">
+                    <a href="" class="navbarLink">Kid</a>
+                </li>
+                <li class="navbarList leftNavbarList colorMode">
+                    <div class="colorModeDark nav-link open" style="padding: 0;"><i class="fas fa-moon"></i></div>
+                    <div class="colorModeLight nav-link close" style="padding: 0;"><i class="fas fa-sun"></i></div>
+                </li>
+            </div>
+          </ul>
+      </header>
+    
+    <!-- Switch Mode --><script src="javascript/switch_color_mode.js"></script>
+    <!-- Bootstrap JS --><script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
