--- a/website/index.html
+++ b/website/index.html
@@ -1,42 +1,39 @@
 <!DOCTYPE html>
 <head>
-    <!-- Bootstrap CSS --><link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <!-- Font Awesome CSS--><link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.13.0/css/all.min.css" />
-    <!-- Navbar --><link rel="stylesheet" href="css/navbar.css"/>
-    <!-- Colors --><link rel="stylesheet" href="css/color.css"/>
-    <!-- Scroll Bar --><link rel="stylesheet" href="css/scroll_bar.css"/>
-    <link href="css/style.css" rel="stylesheet">
-    
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Poseidon</title>
-
+  <!-- Bootstrap CSS --><link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <!-- Font Awesome CSS--><link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.13.0/css/all.min.css" />
+  <!-- Navbar --><link rel="stylesheet" href="css/navbar.css"/>
+  <!-- Colors --><link rel="stylesheet" href="css/color.css"/>
+  <!-- Scroll Bar --><link rel="stylesheet" href="css/scroll_bar.css"/>
+  <link href="css/style.css" rel="stylesheet">
+  
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Poseidon</title>
 </head>
-<body id="mainbody">
+<body>
 
-    <nav class="navbar navbar-expand-lg navbar-light bg-light" id="navbar">
-        <div class="container-fluid">
-          <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link active" href="index.html#">Home</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="index.html#Content">Content</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">About us</a>
+  <header>
+    <ul>
+        <li class="navbarList">
+            <a href="index.html#" class="navbarLink">Home</a>
+        </li>
+        <li class="navbarList">
+            <a href="index.html#Content" class="navbarLink">Content</a>
+        </li>
+        <li class="navbarList">
+            <a href="#" class="navbarLink">About us</a>
+        </li>
+        <div class="leftNavbarList">
+            <li class="navbarList leftNavbarList">
+                <a href="" class="navbarLink">Kid</a>
             </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Kid</a>
+            <li class="navbarList leftNavbarList colorMode">
+                <div class="colorModeDark nav-link open" style="padding: 0;"><i class="fas fa-moon"></i></div>
+                <div class="colorModeLight nav-link close" style="padding: 0;"><i class="fas fa-sun"></i></div>
             </li>
-            <li class="nav-item colorMode">
-                <div class="colorModeDark nav-link open"><i class="fas fa-moon"></i></div>
-                <div class="colorModeLight nav-link close"><i class="fas fa-sun"></i></div>
-            </li>
-            </ul>
-          </div>
         </div>
-    </nav>
+      </ul>
+  </header>
 
     <div class ="alphaHomePage" id="alphaHomePage">
       <div class="alphaHomePageLogo"><span>Logo</span></div>
@@ -54,19 +51,19 @@
 		<div class="carousel-inner">
 
 		  <div class="carousel-item active">
-			  <img src="../Images/normal_section/EarthquakeRealistic.jpg" class="d-block w-100" alt="..." link="Geophysical.html">
+			  <a href="geophysical.html"><img src="../Images/normal_section/EarthquakeRealistic.jpg" class="d-block w-100" alt="..."></a>
 		  </div>
 
 		  <div class="carousel-item">
-			  <img src="../Images/normal_section/FloodRealistic.jpg" class="d-block w-100" alt="..." link="Hydrological.html">
+			  <a href="hydrological.html"><img src="../Images/normal_section/FloodRealistic.jpg" class="d-block w-100" alt="..."></a>
 		  </div>
       
       <div class="carousel-item">
-        <img src="../Images/normal_section/DroughtRealistic.jpg" class="d-block w-100" alt="..." link="Climatological.html">
+        <a href="climatological.html"><img src="../Images/normal_section/DroughtRealistic.jpg" class="d-block w-100" alt="..."></a>
       </div>
 
       <div class="carousel-item">
-        <img src="../Images/normal_section/CycloneRealistic.jpg" class="d-block w-100" alt="..."link="Meteorological.html">
+        <a href="meteorological.html"><img src="../Images/normal_section/CycloneRealistic.jpg" class="d-block w-100" alt="..."></a>
       </div>
 
 		</div>
