--- a/website/index.html
+++ b/website/index.html
@@ -8,28 +8,34 @@
   <link href="css/style.css" rel="stylesheet">
   
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8">
+
   <title>Poseidon</title>
 </head>
 <body>
-
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="crossorigin="anonymous"></script>
   <header>
     <ul>
         <li class="navbarList">
-            <a href="index.html#" class="navbarLink">Home</a>
+            <a href="index.html#" class="navbarLink _tr_Home">Home</a>
         </li>
         <li class="navbarList">
-            <a href="index.html#Content" class="navbarLink">Content</a>
+            <a href="index.html#Content" class="navbarLink _tr_Content">Content</a>
         </li>
         <li class="navbarList">
-            <a href="#" class="navbarLink">About us</a>
+            <a href="#" class="navbarLink _tr_AboutUs">About us</a>
         </li>
         <div class="leftNavbarList">
             <li class="navbarList leftNavbarList">
-                <a href="" class="navbarLink">Kid</a>
+                <a href="" class="navbarLink _tr_Kid">Kid</a>
             </li>
-            <li class="navbarList leftNavbarList colorMode">
-                <div class="colorModeDark nav-link open" style="padding: 0;"><i class="fas fa-moon"></i></div>
-                <div class="colorModeLight nav-link close" style="padding: 0;"><i class="fas fa-sun"></i></div>
+            <li class="navbarList leftNavbarList ">
+              <div class="navbarLink flagLink"><img id="flagIMG" src="https://upload.wikimedia.org/wikipedia/en/thumb/a/ae/Flag_of_the_United_Kingdom.svg/1200px-Flag_of_the_United_Kingdom.svg.png" alt="UK Flag"></div>
+
+            </li>
+            <li class="navbarList leftNavbarList">
+                <div class="colorModeDark nav-link open" style="padding: 0;"><i class="fas fa-sun"></i></div>
+                <div class="colorModeLight nav-link close" style="padding: 0;"><i class="fas fa-moon"></i></div>
             </li>
         </div>
       </ul>
@@ -46,7 +52,7 @@
 		  <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
 		  <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
 		  <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
-          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="Slide 4"></button>
+      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="Slide 4"></button>
 		</div>
 		<div class="carousel-inner">
 
@@ -83,6 +89,7 @@
 
     
     
-    <!-- Switch Mode --><script src="javascript/switch_color_mode.js"></script>
+    <!-- Switch Color Mode --><script src="javascript/switch_color_mode.js"></script>
+    <!-- Switch Language --><script src="javascript/switch_language.js"></script>
     <!-- Bootstrap JS --><script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
