Add switch arrow disasters

--- a/website/index.html
+++ b/website/index.html
@@ -6,6 +6,8 @@
   <!-- Colors --><link rel="stylesheet" href="css/color.css"/>
   <!-- Scroll Bar --><link rel="stylesheet" href="css/scroll_bar.css"/>
   <link href="css/style.css" rel="stylesheet">
+
+  <!-- Logo --><link rel="icon" type="image/x-icon" href="../Images/Logo.png">
   
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta charset="UTF-8">
@@ -84,10 +86,6 @@
 		</button>
 	  </div>
     </div>
-
-
-
-    
     
     <!-- Switch Color Mode --><script src="javascript/switch_color_mode.js"></script>
     <!-- Switch Language --><script src="javascript/switch_language.js"></script>
