--- a/website/index.html
+++ b/website/index.html
@@ -29,7 +29,7 @@
         </li>
         <div class="leftNavbarList">
             <li class="navbarList leftNavbarList">
-                <a href="" class="navbarLink _tr_Kid">Kid</a>
+                <a href="" class="navbarLink _tr_Kid">For kids</a>
             </li>
             <li class="navbarList leftNavbarList ">
               <div class="navbarLink flagLink"><img id="flagIMG" src="https://upload.wikimedia.org/wikipedia/en/thumb/a/ae/Flag_of_the_United_Kingdom.svg/1200px-Flag_of_the_United_Kingdom.svg.png" alt="UK Flag"></div>
