--- a/website/Geophysical.html
+++ b/website/Geophysical.html
@@ -44,12 +44,19 @@
         </div>
         </ul>
     </header>
-    
+    <div class ="Earthquake">
+        <div class="Earthquake_pic">
+            <img src="" alt="pic">
+            </div>
+            <div class="Earthquake_txt">
+                                <span>TExt</span>
+            </div>
+            </div>
     <div class="switch_arrow_disasters">
         <div class="right_switch_arrow_disasters"><a class="right_arrow" href="hydrological.html"><i class="fas fa-arrow-circle-right"></i></a></div>
         <div class="left_switch_arrow_disasters"><a class="left_arrow" href="meteorological.html"><i class="fas fa-arrow-circle-left"></i></a></div>
     </div>
-
+    
     <!-- Switch Mode --><script src="javascript/switch_color_mode.js"></script>
     <!-- Switch Language --><script src="javascript/switch_language.js"></script>
     <!-- Bootstrap JS --><script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
