--- a/website/index.html
+++ b/website/index.html
@@ -43,7 +43,10 @@
       </ul>
   </header>
 
-    <div class ="alphaHomePage" id="alphaHomePage">
+  <div class ="alphaHomePage" id="alphaHomePage">
+      <video id="videobcg" preload="auto" autoplay="true" loop="loop" muted volume="0"> 
+        <source src="../Images/WaveBGvideo.mov" type="video/mp4">
+      </video> 
       <div class="alphaHomePageLogo"><span><img src="../Images/Logo.png" width="300" alt=""></span></div>
       <div class="alphaHomePageText"><span>Poseidon</span></div>
   </div>
@@ -118,13 +121,13 @@
     <div class="user">
       <img src="../Images/team/Georgi_Kotakov.jpg" alt="Georgi Kotakov" width="250">
       <h2 class="username _tr_Georgi_Kotakov">Georgi Kotakov</h2>
-      <h4 class="role _tr_Backend_Developer">Backend Developer</h4>
+      <h4 class="role">Backend Developer</h4>
     </div>
 
     <div class="user">
       <img src="../Images/team/Georgi_Kotakov.jpg" alt="Ivailo Dimitrov" width="250">
       <h2 class="username _tr_Ivailo_Dimitrov">Ivailo Dimitrov</h2>
-      <h4 class="role _tr_Frontend_Developer">Frontend Developer</h4>
+      <h4 class="role">Frontend Developer</h4>
     </div>
 
     <div class="user">
