create Geophysical base

--- a/website/Geophysical.html
+++ b/website/Geophysical.html
@@ -46,6 +46,32 @@
     </header>
 
 
+
+    <div class="Earthquake_Section1">
+        <div class="Earthquake_Section_txt">
+            <p></p>
+        </div>
+        <div class="Earthquake_Section_pic">
+            <img></img>
+        </div>
+        <div class="Earthquake_Section_IF">
+            <p></p>
+        </div>
+    </div>
+
+    <div class="Volcano_Section1">
+        
+        <div class="Volcano_Section_pic">
+            <img></img>
+        </div>
+        <div class="Volcano_Section_txt">
+            <p></p>
+        </div>
+        <div class="Volcano_Section_IF">
+            <p></p>
+        </div>
+    </div>
+    
     <div class="switch_arrow_disasters">
         <div class="right_switch_arrow_disasters"><a class="right_arrow" href="hydrological.html"><i class="fas fa-arrow-circle-right"></i></a></div>
         <div class="left_switch_arrow_disasters"><a class="left_arrow" href="meteorological.html"><i class="fas fa-arrow-circle-left"></i></a></div>
