--- a/website/Geophysical.html
+++ b/website/Geophysical.html
@@ -45,17 +45,20 @@
         </ul>
     </header>
 
-
+        <h1 class="Geophysical_page_heading">Geophysical Natural disasters</h1>
+        <br/><h2 class="Geophysical_page_heading_2">(natural disasters caused by seismic activity)</h2>
 
     <div class="Earthquake_Section1">
         <div class="Earthquake_Section_txt">
-            <p></p>
+            <p>
+                An earthquake is what happens when two blocks of the earth suddenly slip past one another. The surface where they slip is called the fault or fault plane. The location below the earth’s surface where the earthquake starts is called the hypocenter, and the location directly above it on the surface of the earth is called the epicenter. Sometimes an earthquake has foreshocks. These are smaller earthquakes that happen in the same place as the larger earthquake that follows. Scientists can’t tell that an earthquake is a foreshock until the larger earthquake happens. The largest, main earthquake is called the main shock. Main shocks always have aftershocks that follow. These are smaller earthquakes that occur afterwards in the same place as the main shock. Depending on the size of the main shock, aftershocks can continue for weeks, months, and even years after the main shock!
+            </p>
         </div>
         <div class="Earthquake_Section_pic">
             <img></img>
         </div>
         <div class="Earthquake_Section_IF">
-            <p></p>
+            <p>The Great Chile Earthquake is the largest magnitude earthquake (9.5) since seismographic observations have been made. It occurred at 19:11 UTC (early afternoon local time) on 22 May 1960, with its epicentre at the town of Valdivia in Chile, 700 km south of the capital Santiago de Chile. It was preceded by a series of earthquakes the previous day, reaching magnitude 8 and with an epicentre about 160 km to the north. Despite the record magnitude of the earthquake, most of the casualties and destruction were caused by the tsunami that followed, with waves reaching 25 m high. Most of the damage was in southern Chile, killing about 3 000 people. The tsunami that followed the earthquake also devastated the coast of Japan and Hawaii across the Pacific.</p>
         </div>
     </div>
 
