--- a/website/index.html
+++ b/website/index.html
@@ -5,6 +5,7 @@
   <!-- Navbar --><link rel="stylesheet" href="css/navbar.css"/>
   <!-- Colors --><link rel="stylesheet" href="css/color.css"/>
   <!-- Scroll Bar --><link rel="stylesheet" href="css/scroll_bar.css"/>
+  <link rel="stylesheet" href="css/subtopics"/>
   <link href="css/style.css" rel="stylesheet">
 
   <!-- Logo --><link rel="icon" type="image/x-icon" href="../Images/Logo.png">
@@ -126,13 +127,13 @@
     </div>
 
     <div class="user">
-      <img src="../Images/team/Georgi_Kotakov.jpg" alt="Ivailo Dimitrov" width="250">
+      <img src="../Images/team/Ivailo_Dimitrov.jpg" alt="Ivailo Dimitrov" width="250">
       <h2 class="username _tr_Ivailo_Dimitrov">Ivailo Dimitrov</h2>
       <h4 class="role">Frontend Developer</h4>
     </div>
 
     <div class="user">
-      <img src="../Images/team/Georgi_Kotakov.jpg" alt="Dimitur Yoldov" width="250">
+      <img src="../Images/team/Dimitur_Yoldov.jpg" alt="Dimitur Yoldov" width="250">
       <h2 class="username _tr_Dimitur_Yoldov">Dimitur Yoldov</h2>
       <h4 class="role _tr_Designer">Designer</h4>
     </div>
