--- a/website/Geophysical.html
+++ b/website/Geophysical.html
@@ -55,12 +55,12 @@
             </div>
         </div>
 
-        <div class="geophysical-item">
+        <a href="#geophysical-landslides"> <div class="geophysical-item">
             <img src="../Images/normal_section/LandslidesRealistic.jpg" class="d-block w-100">
             <div class="img-overlay-geophysical">
-                <a href="#geophysical-landslides"><div class="img-overlay _tr_Geophysical_Landslides"><span></span></div></a>
+                <div class="img-overlay _tr_Geophysical_Landslides"><span></span></div>
             </div>
-        </div>
+        </div></a>
 
         <div class="geophysical-item">
             <img src="../Images/normal_section/sinkhole.jpg" class="d-block w-100">
@@ -78,15 +78,7 @@
             </div>
         </div>
 
-        <div class="geophysical-item">
-            <img src="../Images/normal_section/Dust_Storm.jpg" class="d-block w-100">
         
-            <div class="img-overlay-geophysical">
-                <a href="#geophysical-dust-storms"> <div class="img-overlay _tr_Geophysical_Dust_Storms"><span></span></div></a>
-            </div>
-        </div>
-    </div>
-
     
     <div class="switch_arrow_disasters">
         <div class="right_switch_arrow_disasters"><a class="right_arrow" href="hydrological.html"><i class="fas fa-arrow-circle-right"></i></a></div>
