--- a/website/Meteorological.html
+++ b/website/Meteorological.html
@@ -95,6 +95,16 @@
         </div>
     </div>
 
+    <div class="meteorological-item">
+        <img src="../Images/normal_section/Dust_Storm.jpg" class="d-block w-100">
+    
+        <div class="img-overlay-meteorological">
+            <a href="#meteorological-dust-storms"> <div class="img-overlay _tr_Meteorological_Dust_Storms"><span></span></div></a>
+        </div>
+    </div>
+</div>
+
+
     <div class="switch_arrow_disasters">
         <div class="right_switch_arrow_disasters"><a class="right_arrow" href="geophysical.html"><i class="fas fa-arrow-circle-right"></i></a></div>
         <div class="left_switch_arrow_disasters"><a class="left_arrow" href="climatological.html"><i class="fas fa-arrow-circle-left"></i></a></div>
