main changes and fixes

--- a/website/index.html
+++ b/website/index.html
@@ -19,19 +19,18 @@
   <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="crossorigin="anonymous"></script>
   <header>
     <ul>
-        <li class="navbarList">
+        <li class="navbarList RightNavbarList">
             <a href="index.html#" class="navbarLink _tr_Home">Home</a>
         </li>
-        <li class="navbarList">
+        <li class="navbarList RightNavbarList">
             <a href="index.html#Content" class="navbarLink _tr_Content">Content</a>
         </li>
-        <li class="navbarList">
+        <li class="navbarList RightNavbarList">
             <a href="index.html#About-us" class="navbarLink _tr_AboutUs">About us</a>
         </li>
         <div class="leftNavbarList">
-            <li class="navbarList leftNavbarList">
-                <a href="" class="navbarLink _tr_Kid">For kids</a>
-            </li>
+          
+       
             <li class="navbarList leftNavbarList ">
               <div class="navbarLink flagLink"><img id="flagIMG" src="https://upload.wikimedia.org/wikipedia/en/thumb/a/ae/Flag_of_the_United_Kingdom.svg/1200px-Flag_of_the_United_Kingdom.svg.png" alt="UK Flag"></div>
 
