--- a/website/index.html
+++ b/website/index.html
@@ -114,25 +114,25 @@
   <div class="about-us-content">
 
     <div class="user">
-      <img src="../Images/team/Aleksander_Kostov.jpg" alt="Alexander Kostov" width="250">
+      <img src="../Images/team/Aleksander_Kostov.jpg" alt="Alexander Kostov" height="250" width="250">
       <h2 class="username _tr_Alexander_Kostov">Alexander Kostov</h2>
       <h4 class="role _tr_Scrum_Trainer">Scrum Trainer</h4>
     </div>
 
     <div class="user">
-      <img src="../Images/team/Georgi_Kotakov.jpg" alt="Georgi Kotakov" width="250">
+      <img src="../Images/team/Georgi_Kotakov.jpg" alt="Georgi Kotakov" height="250" width="250">
       <h2 class="username _tr_Georgi_Kotakov">Georgi Kotakov</h2>
       <h4 class="role">Backend Developer</h4>
     </div>
 
     <div class="user">
-      <img src="../Images/team/Ivailo_Dimitrov.jpg" alt="Ivailo Dimitrov" width="250">
+      <img src="../Images/team/Ivailo_Dimitrov.jpg" alt="Ivailo Dimitrov" height="250" width="250">
       <h2 class="username _tr_Ivailo_Dimitrov">Ivailo Dimitrov</h2>
       <h4 class="role">Frontend Developer</h4>
     </div>
 
     <div class="user">
-      <img src="../Images/team/Dimitur_Yoldov.jpg" alt="Dimitur Yoldov" width="250">
+      <img src="../Images/team/Dimitur_Yoldov.jpg" alt="Dimitur Yoldov" height="250" width="250">
       <h2 class="username _tr_Dimitur_Yoldov">Dimitur Yoldov</h2>
       <h4 class="role _tr_Designer">Designer</h4>
     </div>
